--- a/game/index.html
+++ b/game/index.html
@@ -50,7 +50,7 @@
     </section>
     <button class="Button next">next round</button>
     <button class="Button end">end game</button>
-    <button class="Button quit"><a href="https://samannaway.github.io/index.html">quit game</a></button>
+    <button class="Button quit"><a href="https://samannaway.github.io/Rock-Paper-Scissor/">quit game</a></button>
     <script src="script.js"></script>
 </body>
 </html>
