--- a/game/index.html
+++ b/game/index.html
@@ -26,6 +26,8 @@
                     <p class="computerScore"></p>
                 </span>
             </span>
+            <h1 class="gameTime"></h1>
+            <h1 class="moveCoolDown"></h1>
             <h1 class="whoWon"></h1>
         </div>
         
@@ -49,8 +51,7 @@
         </div>
     </section>
     <button class="Button next">next round</button>
-    <button class="Button end">end game</button>
-    <button class="Button quit"><a href="https://samannaway.github.io/Rock-Paper-Scissor/">quit game</a></button>
+    <button class="Button quit" ><a href="\index.html">quit game</a></button>
     <script src="script.js"></script>
 </body>
 </html>
