--- a/game/index.html
+++ b/game/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&family=Twinkle+Star&family=Righteous&family=Russo+One&family=Staatliches&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Jockey+One&family=Luckiest+Guy&family=Twinkle+Star&family=Righteous&family=Russo+One&family=Staatliches&display=swap" rel="stylesheet">
 </head>
 <body>
     <section class="main">
